Restarting DALN worker API endpoint
